# www.tobys.cloud

./: .gitignore  .gitmodules  BUILD.bazel  Dockerfile  Gemfile  LICENSE  MODULE.bazel  Makefile  OpenCode.md  README.md  WORKSPACE  app.js  deps.bzl  go.mod  go.sum  index.html  manifest.yml  rules.bzl  styles.css
.github/: dependabot.yml  main.workflow
.github/workflows/: bazel.yaml  build-images.yaml  build-sites.yaml  sites-tests.yaml  test-sites.yaml  utilityroom-club-ci.yml
acceptance/: Dockerfile  Gemfile
acceptance/spec/: BUILD.bazel  assets.tobys.cloud_spec.rb  jvnl_spec.rb  k8s_spec.rb  page-404_spec.rb  spec_helper.rb  stats.tobys.cloud_spec.rb  www.toby.codes_spec.rb
concourse/pipelines/: deploy-404-page.yaml  deploy-assets-tobys-cloud.yaml  deploy-page-404.yaml  deploy-stats-tobys-cloud.yaml  deploy-toby-codes.yaml  deploy-todos-tobys-cloud.yaml  deploy-www-toby-codes.yaml  deploy-www-tobys-cloud.yaml
concourse/tasks/: kubectl-apply.yaml  kubectl-rollout-restart.yaml
conf/nginx/: photos.conf
infra/cert-manager/: 03-prod-issuer.yaml
infra/static-sites/: 01-namespace.yaml
infra/www.tobys.cloud/: prometheus
infra/www.tobys.cloud/cert-manager/: 03-prod-issuer.yaml  03-staging-issuer.yaml
infra/www.tobys.cloud/scripts/: apply-tsp  open
infra/www.tobys.cloud/static-sites/: 02-www-toby-codes.yaml  02-www-tobys-cloud.yaml
infra/www.tobys.cloud/tsp-system/: Chart.yaml  requirements.yaml  values.yaml
k8s/: kustomization.yaml
k8s/cert-manager/: 02-cert-manager.yaml  03-prod-issuer.yaml  03-staging-issuer.yaml  kustomization.yaml  prod-issuer.yaml
k8s/concourse-system/: 01-namespace.yaml  02-ingress.yaml  apply.sh  meta.yaml  values.yaml
k8s/finance/: 01-namespace.yaml  02-monzo-exporter.yaml  03-service-monitors.yaml  apply.sh  meta.yaml
k8s/haproxy-system/: 01-namespace.yaml  02-ingress.yaml  03-ingress-class.yaml  ingress.yaml  kustomization.yaml
k8s/ingress-nginx/: 01-ingress.yaml  02-service.yaml  values.yaml
k8s/kube-system/: external-dns.yaml  kustomization.yaml
k8s/metallb-system/: 02-metallb-resources.yaml  kustomization.yaml  metallb.yaml
k8s/metrics/: 02-petitions-exporter.yaml  02-weather-exporter.yaml  03-service-monitors.yaml  apply.sh  grafana-agent-config-map.yaml  grafana.yaml  kustomization.yaml  meta.yaml  node-exporter.yaml  rrdtool.yaml  x509-exporter.yaml
k8s/prometheus-system/: apply.sh  meta.yaml  values.yaml
k8s/registry/: 02-ingress.yaml  apply.sh  meta.yaml  values.yaml
k8s/sites/: 01-namespace.yaml  02-assets-tobys-cloud.yaml  02-page-404.yaml  02-service-account.yaml  02-stats-tobys-cloud.yaml  02-www-toby-codes.yaml  02-www-tobys-cloud.yaml  03-acceptance-tests.yaml  acceptance-tests.yaml  apply.sh  assets-tobys-cloud.yaml  kustomization.yaml  mischiefs.yaml  page-404.yaml  stats-tobys-cloud.yaml  www-toby-codes.yaml  www-tobys-cloud.yaml
k8s/static-sites/: 02-404-page.yaml  02-assets-tobys-cloud.yaml  02-page-404.yaml  02-service-account.yaml  02-stats-tobys-cloud.yaml  02-todos-tobys-cloud.yaml  02-www-toby-codes.yaml  02-www-tobys-cloud.yaml
k8s/tailscale/: jvg.yaml  kustomization.yaml  operator.yaml  power.yaml
mischiefs/: go.mod  go.sum  main.go  main_test.go
mischiefs/k8s/: kustomization.yaml
mischiefs/public/: index.html  styles.css
mischiefs/templates/: 400.tmpl  index.tmpl  naaipatronen.tmpl
nomad/: ecoflow-exporter.hcl  enphase-gateway-exporter.hcl  grafana-agent.hcl  prometheus-node-exporter.hcl  smart-meter-exporter.hcl  unpoller.hcl
sites/404-page/: go.mod  go.sum  main_test.go
sites/404-page/templates/: 404.tmpl
sites/assets.tobys.cloud/: BUILD.bazel  Dockerfile  go.mod  go.sum  helpers_test.go  main.go  main_test.go
sites/assets.tobys.cloud/public/: styles.css
sites/mischiefs/: BUILD.bazel  Dockerfile  go.mod  main.go  main_test.go
sites/mischiefs/templates/: index.tmpl  layout.tmpl
sites/page-404/: BUILD.bazel  Dockerfile  go.mod  go.sum  main.go  main_test.go
sites/stats.tobys.cloud/: Dockerfile  chart.go  chart_all.go  chart_petitions.go  chart_weather.go  go.mod  go.sum  helpers_test.go  http.go  main.go  main_test.go  types.go
sites/stats.tobys.cloud/templates/: stats.tmpl
sites/utilityroom.club/: .eslintrc.cjs  BACKLOG.md  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
sites/utilityroom.club/src/: helpers.test.ts  seed.ts  (+3 more)
sites/www.toby.codes/: BUILD.bazel  Dockerfile  go.mod  go.sum  helpers_test.go  main.cr  main.go  main_test.go  shard.yml  www.toby.codes_suite_test.go
sites/www.toby.codes/posts/: 2019-03-Application-load-balancer-with-static-IP-and-source-IP.md  2019-06-Observing-your-bank-account.md  2019-08-Improving-on-call.md  2021-05-Automatic-updates-of-Docker-images-with-Concourse.md  2023-12-Ten-years-of-ruby.md  2024-04-ZooKeeper-connection-limits.md  2024-05-Unifi-en-KPN.md  2024-10-ZooKeeper-and-quorum.md  2025-05-Automation-goes-brrr.md  3-months-of-codebar.md  Application-load-balancer-with-static-IP-and-source-IP.md  Auditing-an-engineering-organisation.md  FOSDEM-2020.md  Getting-a-job-in-tech-in-2021.md  How-I-write-software.md  Operating-a-multi-tenant-Concourse.md  Patterns.md  Pull-requests.md  Speaking.md  Subverting-the-BOSH-release.md  ZooKeeper.md
sites/www.toby.codes/public/: custom.css  styles.css
sites/www.toby.codes/src/layouts/partials/: header.html
sites/www.toby.codes/templates/: 500.tmpl  index.tmpl  layout.tmpl  post.tmpl  posts.tmpl  work.tmpl
sites/www.toby.codes/views/: 404.ecr  500.ecr  index.ecr  layout.ecr  posts.ecr
sites/www.toby.codes/views/posts/: Application-load-balancer-with-static-IP-and-source-IP.md  FOSDEM-2020.md  Improving-on-call.md  Pull-requests.md  Subverting-the-BOSH-release.md
sites/www.tobys.cloud/: Dockerfile
src/: index.html  key.asc  post-enlaundriment.html  styles.css
vultr/terraform/: main.tf
workers/nines/: main.tf  package-lock.json  package.json
workers/pom/: main.tf
workers/what-is-my-ip/: .gitignore  main.tf  package-lock.json  package.json
www.toby.codes/: Staticfile  manifest.yml
www.toby.codes/src/: config.toml  index.html
(+16 files in other folders)
