###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "go-bazel",
    repo_name = "com_github_tlwr_www.toby.codes",
)

bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_go", version = "0.52.0")
bazel_dep(name = "gazelle", version = "0.41.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_ajstarks_svgo",
    "com_github_gomarkdown_markdown",
    "com_github_meatballhat_negroni_logrus",
    "com_github_onsi_ginkgo_v2",
    "com_github_onsi_gomega",
    "com_github_phyber_negroni_gzip",
    "com_github_prometheus_client_golang",
    "com_github_sirupsen_logrus",
    "com_github_unrolled_render",
    "com_github_unrolled_secure",
    "com_github_urfave_negroni",
    "com_github_zbindenren_negroni_prometheus",
)

bazel_dep(name = "rules_ruby", version = "0.17.2")
ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    version_file = "//:.ruby-version",
)
use_repo(ruby, "ruby")
ruby.bundle_fetch(
    name = "bundle",
    gemfile = "//:Gemfile",
    gemfile_lock = "//:Gemfile.lock",
)
use_repo(ruby, "bundle", "ruby_toolchains")
register_toolchains("@ruby_toolchains//:all")

bazel_dep(name = "rules_oci", version = "2.2.2")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "go_alpine_linux",
    image = "index.docker.io/library/golang",
    platforms = [
        "linux/amd64",
    ],
    tag = "1.21",
)
use_repo(oci, "go_alpine_linux", "go_alpine_linux_linux_amd64")

provide_kubeconfig = use_repo_rule("//:rules.bzl", "provide_kubeconfig")
provide_kubeconfig(name = "kubeconfig_home")
