load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library", "go_test")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")

go_library(
    name = "assets_tobys_cloud_lib",
    srcs = ["main.go"],
    importpath = "github.com/tlwr/www.tobys.cloud/sites/assets.tobys.cloud",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_meatballhat_negroni_logrus//:go_default_library",
        "@com_github_phyber_negroni_gzip//gzip:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_unrolled_secure//:go_default_library",
        "@com_github_urfave_negroni//:go_default_library",
        "@com_github_zbindenren_negroni_prometheus//:go_default_library",
    ],
    embedsrcs = glob(["public/**/*"]),
)

go_test(
    name = "assets_tobys_cloud_test",
    srcs = [
        "helpers_test.go",
        "main_test.go",
    ],
    data = [":cmd"],
    deps = [
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
        "@com_github_onsi_gomega//gexec",
    ],
)

go_binary(
    name = "cmd",
    out = "assets-tobys-cloud",
    embed = [":assets_tobys_cloud_lib"],
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "linux",
    platform = "@io_bazel_rules_go//go/toolchain:linux_amd64",
    target = ":cmd",
)

pkg_tar(
    name = "app_layer",
    srcs = [":cmd"],
    package_dir = "/",
)

oci_image(
    name = "image",
    base = "@go_alpine_linux",
    entrypoint = ["/assets-tobys-cloud"],
    tars = [":app_layer"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "ghcr.io/tlwr/assets.tobys.cloud",
)
